[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/DeathMenu.gd" type="Script" id=1]

[node name="DeathMenu" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 140.0
margin_top = 70.0
margin_right = 223.0
margin_bottom = 138.0

[node name="RestartFightButton" type="Button" parent="VBoxContainer"]
margin_right = 134.0
margin_bottom = 20.0
focus_neighbour_top = NodePath("../QuitButton")
text = "Restart Fight"

[node name="GoToMenuButton" type="Button" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 134.0
margin_bottom = 44.0
text = "Back to Main Menu"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 134.0
margin_bottom = 68.0
focus_neighbour_bottom = NodePath("../RestartFightButton")
text = "Quit"

[connection signal="pressed" from="VBoxContainer/RestartFightButton" to="." method="_on_RestartFightButton_pressed"]
[connection signal="pressed" from="VBoxContainer/GoToMenuButton" to="." method="_on_GoToMenuButton_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
